fixed dark mode colors a bit

--- a/src/Styles/addReview.css
+++ b/src/Styles/addReview.css
@@ -30,7 +30,7 @@
 }
 
 .fab-add-review > a {
-  color: black;
+  color: inherit;
 }
 
 @media (max-width: 768px) {
